--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,10 @@
 
 
 <!-- <app-navbar></app-navbar> -->
+<app-sidebar></app-sidebar>
 
 <router-outlet></router-outlet>
+<!-- <app-employee-management></app-employee-management> -->
 
 <!-- <app-addstu></app-addstu> -->
 <!-- <app-home></app-home> -->
