--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,8 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+body{
+    background-color: #ecf0f1;
+}
 
 @import '~bootstrap/dist/css/bootstrap.css';
