--- a/src/app/dialog-delete/dialog-delete.component.html
+++ b/src/app/dialog-delete/dialog-delete.component.html
@@ -2,7 +2,8 @@
 <div mat-dialog-content>
   <p>Are you sure you want to delete the student <strong>{{ data.name }}</strong>?</p>
 </div>
-<div mat-dialog-actions>
-    <button mat-button color="warn" (click)="onConfirm()">Delete</button>
-  <button mat-button (click)="onCancel()">Cancel</button>
+<div mat-dialog-actions style="display: flex;  justify-content: center;">
+  <button mat-button (click)="onCancel()">No</button>
+  <button mat-button color="warn" (click)="onConfirm()">Yes</button>
+  
 </div>
