--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -2,35 +2,44 @@
 <app-navbar></app-navbar>
 
 <section style="margin-left: 200px;">
-    <!-- <div class="example-button-row">
-      <a mat-flat-button routerLink="/student/addstudent" style="background-color: #00d0d0;">Add Student</a>
-    </div> -->
-<!-- -----------------Filter button------------------- -->
+
 <div style="display: flex;">   
 
-  <div class="container" style="margin-top: 20px;">
-    <button mat-raised-button color="primary" style="background-color: #ff78ac;" (click)="openDialog()">Add Student</button>
-  </div>
+  <section>
+    <div class="example-button-row">
+      <div class="example-flex-container">
+        <div class="example-button-container">
+          <button  mat-fab aria-label="Example icon button with a add icon" (click)="openDialog()" >
+            <mat-icon>person_add</mat-icon>
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- ----------------------------------------- -->
+
+    <!-- -----------------Filter button------------------- -->
 
 <div>
-      <mat-form-field appearance="fill" style="width: 300px; margin-top: 10px;">
+      <mat-form-field appearance="fill" style="width: 400px; margin-top: 10px;">
         <mat-label>Filter</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Type to search" />
       </mat-form-field>
 </div>
     <!-- --------------------Dialog--------------------- -->
-    
+
   </div> 
   </section>
-  <hr>
+  <!-- <hr> -->
 <!-- -------------------------Table-------------------------------------- -->
-<div style="display: flex; justify-content: center; margin:0 150px">
+<div style="display: flex; justify-content: center;">
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table table-striped table-hover">
-
-    <ng-container matColumnDef="id">
+    <ng-container matColumnDef="srNo">
       <th mat-header-cell *matHeaderCellDef style="padding-left: 30px;"> Sr. No </th>
-      <td mat-cell *matCellDef="let element" style="padding-left: 30px;"> {{element.id}} </td>
+      <td mat-cell *matCellDef="let element; let i = index" style="padding-left: 30px;">
+        {{ (pageIndex * pageSize) + (i + 1) }}
+      </td>
     </ng-container>
   
     <!-- Name Column -->
@@ -60,8 +69,9 @@
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let element">
           <div style="display:flex; gap: 10px;">
-            <button mat-raised-button color="primary" (click)="onUpdate(element.id)">Update</button>
-            <button mat-raised-button color="warn" (click)="onDelete(element.id)">Delete</button>
+            <button mat-raised-button color="primary" (click)="onUpdate(element._id)"><mat-icon style="margin-left: 5px;">edit</mat-icon></button>
+            
+            <button mat-raised-button color="warn" (click)="onDelete(element._id)"><mat-icon style="margin-left: 5px;">delete</mat-icon></button>
           </div>
         </td>
       </ng-container>
@@ -72,7 +82,7 @@
 </div>
     <!-- ------------pagination------------ -->
 
-  <mat-paginator [length]="dataSource.data.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  <mat-paginator [length]="dataSource.data.length" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 25, 100]"  (page)="onPageChange($event)"></mat-paginator>
 
   <!-- ----------------------------------------------------------------- -->
 
