--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -10,6 +10,12 @@
       <li routerLink="projects" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
         <i class="icon-projects"></i> Projects
       </li>
+      <li routerLink="gsap1" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <i class="icon-projects"></i> GSAP 
+      </li>
+      <li routerLink="gsap2" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <i class="icon-projects"></i> GSAP ScrollTriggered
+      </li>
     </ul>
   </div>
   <div class="content">
